<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp"
        android:background="#00b4f5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_more_return"
            android:layout_width="@dimen/twenty_dp"
            android:layout_height="@dimen/twenty_dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:background="@mipmap/bt_sceneplay_mode_show" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/twenty_dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:text="@string/more"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/thirty_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:background="@android:color/transparent"
            android:text="@string/Login_immediately"
            android:textColor="#00b4f5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fifteen_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/Synchronous_collection_of_music_to_mobile_phones_computers" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_dp"
        android:orientation="horizontal"
        android:weightSum="4"
    >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ninty_dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/ten_dp">

            <Button
                android:layout_width="@dimen/fifty_five_dp"
                android:layout_height="@dimen/fifty_five_dp"
                android:layout_gravity="center"
                android:background="@mipmap/bt_setup_wifi_nor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/ten_dp"
                android:text="@string/Only_Wifi_network" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="@dimen/fifty_five_dp"
                android:layout_height="@dimen/fifty_five_dp"
                android:layout_gravity="center"
                android:background="@mipmap/bt_setup_auto_close_nor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/ten_dp"
                android:text="@string/Timing_closure" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="@dimen/fifty_five_dp"
                android:layout_height="@dimen/fifty_five_dp"
                android:layout_gravity="center"
                android:background="@mipmap/bt_setup_desktoplyrics_nor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/ten_dp"
                android:text="@string/Desktop_lyrics" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="@dimen/fifty_five_dp"
                android:layout_height="@dimen/fifty_five_dp"
                android:layout_gravity="center"
                android:background="@mipmap/bt_setup_lockscreen_nor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/ten_dp"
                android:text="@string/Lock_screen" />
        </LinearLayout>
    </LinearLayout>
<Button
    android:layout_width="match_parent"
    android:layout_height="@dimen/two_dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginTop="@dimen/twenty_dp"
        android:layout_marginLeft="@dimen/twenty_dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="@dimen/thirty_dp"
                android:layout_height="@dimen/thirty_dp"
                android:background="@mipmap/setting_tool_bt_setup_skin"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/In_the_skin"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="@dimen/thirty_dp"
                android:layout_height="@dimen/thirty_dp"
                android:background="@mipmap/setting_tool_bt_setup_sound"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/ten_dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="@dimen/thirty_dp"
                android:layout_height="@dimen/thirty_dp"
                android:background="@mipmap/setting_tool_bt_setup_scan"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Scan_the_song"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="@dimen/thirty_dp"
                android:layout_height="@dimen/thirty_dp"
                android:background="@mipmap/setting_tool_bt_setup_song"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/The_music_is_music"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/ten_dp"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginTop="@dimen/thirty_dp"
        android:layout_marginLeft="@dimen/twenty_dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="@dimen/thirty_dp"
                android:layout_height="@dimen/thirty_dp"
                android:background="@mipmap/setting_tool_bt_setup_import"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Computer_guide_song"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/ten_dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="@dimen/thirty_dp"
                android:layout_height="@dimen/thirty_dp"
                android:background="@mipmap/ic_setting_vip"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Become_a_platinum_VIP"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="@dimen/thirty_dp"
                android:layout_height="@dimen/thirty_dp"
                android:background="@mipmap/setting_tool_bt_setup_ktv"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Thunderstone_jukebox"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/ten_dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"/>
        </LinearLayout>

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:layout_width="@dimen/twenty_five_dp"
        android:layout_height="@dimen/twenty_five_dp"
        android:background="@mipmap/ic_setting_setting"
        android:layout_marginTop="@dimen/twenty_dp"
        android:layout_marginLeft="@dimen/thirty_dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/twenty_dp"
        android:text="@string/Set_up"
        android:layout_marginTop="@dimen/twenty_dp"
        android:layout_marginLeft="@dimen/twenty_dp"/>
    <Button
        android:layout_width="@dimen/twenty_dp"
        android:layout_height="@dimen/twenty_dp"
        android:background="@mipmap/ic_action_more"
        android:layout_marginTop="@dimen/twenty_dp"
        android:layout_marginLeft="220dp"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/thirty_dp">
        <Button
            android:layout_width="@dimen/twenty_five_dp"
            android:layout_height="@dimen/twenty_five_dp"
            android:background="@mipmap/ic_setting_activity"
            android:layout_marginLeft="@dimen/thirty_dp"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Activity_zone"
            android:layout_marginLeft="@dimen/twenty_dp"/>
        <Button
            android:layout_width="@dimen/twenty_dp"
            android:layout_height="@dimen/twenty_dp"
            android:background="@mipmap/ic_action_more"
            android:layout_marginLeft="190dp"/>
    </LinearLayout>
</LinearLayout>

