<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="搜索K歌伴奏"/>
    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="@dimen/eighty_dp"
        android:id="@+id/kSong_ViewPager"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/ten_dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/twenty_dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_k_ktv"
                android:background="@mipmap/img_k_ktv"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ktv"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/img_k_chinese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/img_k_chinese"/>
            <TextView
                android:id="@+id/tv_k_chinese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chinese"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/img_k_occident"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/img_k_occident"/>
            <TextView
                android:id="@+id/tv_k_occident"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/occident"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/twenty_dp">
            <ImageView
                android:id="@+id/img_k_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/img_k_man"/>
            <TextView
                android:id="@+id/tv_k_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/img_k_women"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/img_k_woman"/>
            <TextView
                android:id="@+id/tv_k_women"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/img_k_band"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/img_k_band"/>
            <TextView
                android:id="@+id/tv_k_band"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/band"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/everybody_sing"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/k_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"/>
</LinearLayout>